--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
 server.port=1200
-#db configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/insurance_policy
-spring.datasource.username=root
-spring.datasource.password=Piyush@33
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -11,3 +8,5 @@ spring.jpa.show-sql=true
 
 #spring.security.user.name=Piyush
 #spring.security.user.password=1234
+
+spring.profiles.active=prod
